# makritup

./: .gitignore  Cargo.toml  Config.toml  LICENSE  Makefile.toml  build.rs
src/: config.rs  lib.rs  main.rs
src/converter/: audio2wav.rs  docx2md.rs  image2md.rs  mod.rs  pptx2md.rs  wav2md.rs  xlsx2csv.rs
src/generator/: csv2md.rs  docx2md.rs  html2md.rs  image2md.rs  mod.rs  pptx2md.rs  wav2md.rs
