[package]
name = "markitup"
version = "0.1.0"
edition = "2024"

[dependencies]
infer = "0.3"
chrono = { version = "0.4.41", features = ["serde"] }
quick-xml = "0.31"
zip = "0.6"

# for wav -> markdown
vosk = "0.3.1" # 离线语音识别
hound = "3.5" # WAV 音频处理

# for config
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18"

# for image -> markdown
base64 = "0.22.1"
ureq = { version = "2.0", features = ["json"] }
serde_json = "1.0"
