[package]
name = "markitup"
version = "0.1.0"
edition = "2024"

[dependencies]
infer = "0.3"
chrono = { version = "0.4.41", features = ["serde"] }
quick-xml = "0.37.5"
zip = "0.6"

# for wav -> markdown
vosk = "0.3.1" # 离线语音识别
hound = "3.5" # WAV 音频处理

# for config
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18"

# for image -> markdown
base64 = "0.22.1"
ureq = { version = "2.0", features = ["json"] }
serde_json = "1.0"

# for docx
docx-rust = "0.1.10"
pathdiff = "0.2"

# for csv
csv = "1.3.1"
ooxml = "0.2.8"

# for html
html2md ="0.2.14"
reqwest={version ="0.11",features=["blocking"]}
clap = { version = "4.0", features = ["derive"] }

# for audio
symphonia = { version = "0.5", features = ["all"] }
